Fixed alignment of buttons etc

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -4,7 +4,7 @@ html, body {
 	height: 100%;
 	width: 100%;
 	font-size: 18px;
-	font-family: 'Lato', sans-serif !important;
+	font-family: 'Open Sans', sans-serif !important;
 }
 
 //Global Classes
